--- a/index.html
+++ b/index.html
@@ -325,7 +325,6 @@
             let y = height * 2 / 3;
 
             console.assert(radios.length == 2);
-            const is_gradient = radios[1].checked;
 
             let color0 = 'rgb(0, 192, 0)';
             let color1 = 'rgba(0, 192, 0, 0)';
@@ -333,7 +332,9 @@
             ctx.strokeStyle = color0;
             ctx.lineWidth = 10;
             //ctx.lineCap = "round"; // 丸みが必要なとき
-            if (is_gradient)
+
+            const is_gradient = radios[1].checked;
+            if (is_gradient) // グラデーションを付けるか？
                 ctx.lineWidth *= 2; // グラデーションを付けると細く見えるので補正する。
 
             // コマンド群に従って描画する
